2004-10-23  Per Bothner  <per@bothner.com>

	* std_syntax.scm (letrec): New syntax definition.

2004-08-24  Per Bothner  <per@bothner.com>

	* ports.scm (open-input-file, open-ouput-file,
	call-with-output-string):  New functions, translated from Java.
	(call-with-input-file, call-with-output-file, call-with-input-string,
	input-port?, output-port?, current-input-port, current-output-port,
	current-error-port, open-output-string):  Add type specifiers.
	* Makefile.am (java_SCM_ALWAYS):  Re-arrange to avoid forward
	references, enabling better inlining.

2004-08-24  Per Bothner  <per@bothner.com>

	* ports.scm (call-with-input-file, call-with-output-file):  Fix thinko
	- neither of these functions are void.

	* files.scm (%file-separator):  "inline" symbol->string to reduce
	circular dependencies - which currently precents automatic inlining.
	* reflection.scm (record-type-name):  Likewise.
	* syntax.scm (%defmacro):  Remove unused and wrong macro.

2004-08-06  Per Bothner  <per@bothner.com>

	* system.scm (compile-file):  New function, converted from Java.

2004-07-31  Per Bothner  <per@bothner.com>

	* syntax.scm (catch):  Add type declarations.  Simplify using invoke.

2004-07-19  Per Bothner  <per@bothner.com>

	* numbers.scm (rationalize, sqrt, exact->inexact, inexact->exact):
	New functions, transcribed from Java code in kawa.standard.

2003-11-21  Per Bothner  <per@bothner.com>

	* ports.scm (call-with-input-file):  New functiom.
	(call-with-output-file):  Add type declaration.

2003-11-21  Hoehle, Joerg-Cyril <Joerg-Cyril.Hoehle@t-systems.com>

	* ports.scm (call-with-output-file):  New functiom.

2003-11-09  Chris Dean  <Chris.Dean@sokitomi.com>

	* strings.scm (string-append, string-append/shared):  New functions.

2003-10-28  Per Bothner  <per@bothner.com>

	* files.scm (system-tmpdir):  Micro-optimization.

2003-09-23  Per Bothner  <per@bothner.com>

	* vectors.scm ((list->vector):  Don't hardwire in paramater type