@@ -80,6 +80,8 @@
 		   (make <gnu.text.SourceMessages>))
 	 (comp :: <gnu.expr.Compilation>
 	       (invoke-static <kawa.lang.CompileFile> 'read source messages)))
+    (if (invoke messages 'seenErrors)
+	(primitive-throw (make <gnu.text.SyntaxException> messages)))
     (invoke comp 'compileToArchive
 	    (invoke comp 'getModule)
 	    output)
